# aula19_bootcamp

./: Dockerfile  database.py  lipe.py  main.py  models.py  pyproject.toml  schema.py  test.db
